apps/radicale/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: radicale
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
