apps/radicale/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radicale
  namespace: radicale
spec:
  type: ClusterIP
  ports:
    - port: 5232
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: radicale
