apps/radicale/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radicale
  namespace: radicale
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: traefik
      sectionName: https
  hostnames:
    - radicale.homelab.lastsector.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radicale
          port: 5232
